# eval-service

./: pyproject.toml  requirements.txt
api/: webui.py
scripts/: start_worker.ps1
worker/: worker.py
