[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeval-service"
version = "0.1.0"
description = "Mortgage RAG Evaluation Service - Built on zeval-ai framework"
requires-python = ">=3.12"
dependencies = [
    "zeval @ git+https://github.com/zhixiangxue/zeval-ai.git",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "schedule>=1.2.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "database*", "evaluator*", "models*", "worker*", "examples*"]
